@@ -4,6 +4,10 @@ Changelog
 1.22 - Unreleased
 -----------------
 
+* Always make ``sources-dir`` option available in buildout, even if it's set
+  to the default. Fixes #49
+  [fschulze]
+
 * Parse revision from url for all svn commands. Fixes #37
   [fschulze]
 
